--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,87 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
 }
+html,
+body {
+     height: 100%;
+ }
+ 
+ body {
+     padding: 8px;
+     background-color: #F6F6F6;
+     box-sizing: border-box;
+ }
+ 
+ //
+ // split-grid
+
+ .grid {
+  display: grid;
+  grid-template-columns: 150px 10px 1fr;
+}
+
+.vertical-gutter {
+  
+  background: rgba(0,0,0,0.2);
+  cursor: col-resize;
+background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
+}
+
+.horizontal-gutter {
+  grid-area: 2 / 1 / 3 / 4;
+  background: rgba(0,0,0,0.4);
+  cursor: row-resize;
+  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII=');
+}
+.horizontal-gutter, .vertical-gutter {
+    background-color: rgb(229, 231, 235);
+    background-repeat: no-repeat;
+    background-position: 50%;
+}
+
+
+// Diagram tree
+
+ul {
+  list-style-type: none;
+   padding-left: 1.3em;
+}
+
+#diagramTree {
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  font-family: "Segoe UI", Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 12px;
+}
+
+#myUL {
+  margin: 0;
+  padding: 0;
+}
+
+.caret {
+  cursor: pointer;
+  user-select: none;
+}
+
+.caret::before {
+  content: "\25B6";
+  color: black;
+  display: inline-block;
+  margin-right: 6px;
+}
+
+.caret-down::before {
+  transform: rotate(90deg);  
+}
+
+.nested {
+  display: none;
+}
+
+.active {
+  display: block;
+}
