--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+  font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
 }
 html,
@@ -8,11 +8,12 @@ body {
  }
  
  body {
-     padding: 8px;
      background-color: #F6F6F6;
      box-sizing: border-box;
  }
- 
+ h1 {
+  margin: 0px;
+ }
  //
  // split-grid
 
